add github demo link

--- a/config.html
+++ b/config.html
@@ -1,4 +1,4 @@
-<!-- SpiritX 2026 Countdown Configuration Page . 
+<!-- MoraSpirit 2026 Countdown Configuration Page . 
  First you have to config the date and time the event will held -->
 
 <!DOCTYPE html>
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Set SpiritX 2026 Event Date</h2>
+    <h2>Set MoraSpirit 2026 Event Date</h2>
     <form id="configForm">
       <label for="eventDate">Event Date:</label>
       <input type="datetime-local" id="eventDate" required />
@@ -23,7 +23,7 @@
     const savedMessage = document.getElementById("savedMessage");
 
     // Load existing date
-    const saved = localStorage.getItem("spiritx_event_date");
+    const saved = localStorage.getItem("MoraSpirit_event_date");
     if (saved) {
       document.getElementById("eventDate").value = new Date(saved).toISOString().slice(0, 16);
     }
@@ -31,7 +31,7 @@
     form.addEventListener("submit", function(e) {
       e.preventDefault();
       const date = document.getElementById("eventDate").value;
-      localStorage.setItem("spiritx_event_date", new Date(date).toISOString());
+      localStorage.setItem("MoraSpirit_event_date", new Date(date).toISOString());
       savedMessage.textContent = "Date saved successfully!";
     });
   </script>
