--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SpiritX 2026 Countdown</title>
+  <title>MoraSpirit 2026 Countdown</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="container">
-    <h1>SpiritX 2026 Countdown</h1>
+    <h1>MoraSpirit 2026 Countdown</h1>
     <div id="countdown">Loading...</div>
     <p id="message"></p>
   </div>
